# quick-aws-sso-config

./: README.md  aws_sso_credential_process.sh  bootstrap_env.sh  pyproject.toml
