[tool.poetry]
name = "quick-aws-sso-config"
version = "0.1.0"
description = ""
authors = ["Chris Wheeler <cmwhee@gmail.com>"]
readme = "README.md"
packages = [{include = "quick_aws_sso_config"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
